[package]
name = "unco"
edition = "2021"
version = { workspace = true }
authors = ["LangPham"]
license = "MIT"
repository = "https://github.com/theta-vn/unco"
description = "Supports working with SurealDB"
readme = "../README.md"

[dependencies]
anyhow = "1.0"
once_cell = "1.19"
serde = "1.0"
serde_json = "1.0"
surrealdb = "1.5"

[dependencies.unco_derives]
version = "0.0.2"
path = "../unco_derives"

[dev-dependencies]
tokio = "1.38"
