[package]
name = "unco_derives"
edition = "2021"
version = { workspace = true }
authors = ["LangPham"]
license = "MIT"
repository = "https://github.com/theta-vn/unco"
description = "Macro for Unco"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
syn = {version = "2.0", features = ["derive", "fold", "full", "extra-traits"]}
quote = "1.0"
